--- a/daw/sistemas/sistemasUno.html
+++ b/daw/sistemas/sistemasUno.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../../css/mediaQ.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Titan+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Smooch&family=Titan+One&display=swap" rel="stylesheet">
   <title>Sistemas Informáticos</title>
 </head>
 <body>
@@ -35,7 +35,7 @@
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
-      <h3 class="subTitulo" id="unoDos">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
+      <h3 class="subTitulo">Estructura y componentes de un sistema informático, periféricos y adaptadores para la conexión de dispositivos</h3>
         <p>El sistema informático se compone de una parte central (ordenador) y unos dispositivos que facilitan la entrada/salida de informácion (periféricos). Un ordenador está formado por dos tipos de elementos:</p>
         <ul>
           <li><strong>Software</strong>: Componentes lógicos o programas.</li>
@@ -81,7 +81,7 @@
           <a href="../../index.html"><div class="botonO">Principal</div></a>
           <a href="#unoUno"><div class="botonO">Arriba</div></a>
       </div>
-      <h3 class="subTitulo" id="">Tipos y topologias de red</h3>
+      <h3 class="subTitulo" id="unoDos">Tipos y topologias de red</h3>
         <p>Una red de ordenadores es un conjunto de equipos interconectados entre sí que permiten compartir recursos e información. Es necesario que dispongan de tarjeta de red, cables de conexión, dispositivos perifericos y un software adecuado.</p>
         <h4 class="apartado">Tipos de red según su extensión</h4>
           <ol>
@@ -133,11 +133,6 @@
         <p>Es una representación gráfica de una red en el mundo real. Todo deberá tenerse en cuenta para garantizar que la señal llegue a cada equipo de la mejor forma posible. Se realizan por aplicaciones que nos ofrecen subir los mapas como archivos en formatos para mostrar la representación y poder interacturar con los diferentes componentes o cosultar información de esta.</p>
       <h4 class="apartado">Mapa lógico</h4>
         <p>Documentación que hace referencia a los aspectos internos de la red. Es necesario saber que dirección ip tiene asignada cada ordenador, a que subred pertenece etc... Es una representación más técnica, que facilita el mantenimiento de la red, y la incorporación de nuevos nodos. Hay aplicaciones que nos ayudan a obtener la información necesaria de lso equipos, pero cuando se comprueba de forma masiva en redes muy grandes, se suele utilizar la consola de comandos.</p>
-        <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
-          <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
-      </div>
       <h3 class="subTitulo" id="unoCuatro">Arquitectura de un Sistema Operativo</h3>
         <p>Los sitemas operativos han evoluciodo de forma notable, las consolas tipo texto han dejado paso a interfaces de tipo gráfico como windows o mac os x.</p>
         <p>Podemos distinguir en la arquitectura los siguientes elementos clave: <br></p>
@@ -211,11 +206,6 @@
           <li><strong>Aplicaciones en red</strong>: Se ejecutan en un entorno de red local. Las aplicaciones primero se ejecutan de manera local y segundo de manera remota.</li>
           <li><strong>Aplicaciones web o en la nube</strong>: La mayor parte se ejecuta en un servidor remoto y queda accesible a través de internet. A veces los datos también se almacenan online.</li>
         </ul>
-        <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
-          <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
-      </div>
     <h3 class="subTitulo" id="unoOcho">Licencias y tipos</h3>
     <h4 class="apartado">Licencias</h4>
         <ul>
@@ -237,19 +227,9 @@
         </div>
     <h3 class="subTitulo" id="unoNueve">Gestores de arranque</h3>
         <p>Los gestores de arranque son un pequeño programa que se ejecuta una vez iniciada la bios. Prepara los elementos más básicos para que el S.O. funcione.</p>
-        <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
-          <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
-      </div>
     <h3 class="subTitulo" id="unoDiez">Maquinas virtuales</h3>
         <p>Son un software que nos permite instalar S.O. de forma que crea que está instalado en un equipo. Hay dos tipos diferentes, las de sistemas y las de proceso. Emulan un ordenador por completo y ejecutan un S.O. en su interior. <br>Utilizan el hardware instalado en el equipo base, todo funcionará como si de un pc normal se tratase.</p>
         <p>Las de proceso no emulan todo el equipo completo sino que ejecutan un proceso concreto como una aplicación. Son muy útiles para crear aplicaciones para varias plataformas, creando un entorno de ejecución para lidiar con el S.O. y no programar específicamente para un sistema.</p>
-        <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
-          <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
-      </div>
     <h3 class="subTitulo" id="unoOnce">Consideraciones previas a la instalación de sistemas operativos libres y propietarios</h3>  
         <ul>
           <li><strong>Requisitos del hardware</strong>: La documentación de los S.O. ofrece características mínimas requeridas.</li>
@@ -277,11 +257,6 @@
           <li><strong>Primarias</strong>: Pueden ser reconocidas como particiones de arranque. Un disco cuenta con una única partición primaria que abarca todo el espacio disponible, está limitado a cuatro.</li>
           <li><strong>Extendidas o secundarias</strong>: Complemento o ampliación de las primarias que permiten definir más unidades lógicas. Se crearon para saltarse la limitación de cuatro particiones primarias por disco.</li>
         </ul>
-        <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
-          <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
-      </div>
     <h3 class="subTitulo" id="unoTrece">Instalación y desintalación de aplicaciones. Requisitos, versiones y licencias.</h3>
         <p>Antes de instalarlas debemos estar seguros de que cumplimos lo especificado en la documentación.</p>
       <ul>
@@ -303,11 +278,6 @@
           <li><strong>Instalación en limpio</strong>: A veces debemos desinstalar la versión previa antes de instalar la nueva.</li>
         </ul>
         <p> En ocasiones su propia interfaz nos advertirá de actualizaciones disponibles. Los S.O. también advierten de actualizaciones disponibles, estas mejoraran y perfilarán funcionalidades y también redundarán en una mayor seguridad. En S.O. linux se pueden utilizar comandos o aplicaciones para comprobar las actualizaciones.</p>
-        <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
-          <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
-      </div>
     <h3 class="subTitulo" id="unoQuince">Archivos de inicio de S.O.</h3>
         <p>Los pasos para iniciar un ordenador varian dependiendo a diversos factores, dispositivos de arranque, existencia de particiones, etc...</p>
       <ol>
@@ -315,18 +285,8 @@
         <li>Luego, carga el gestor de arranque y seguidamente el S.O. Aquí se ejecutan los archivos de inicio. Se ocupan de cargar en memoria los servicios o los programas residentes.</li>
       </ol>
         <p>Estos archivos pueden editarse con un editor de texto simple. En algunos casos contamos con software específico para operar cambios.</p>
-        <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
-          <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
-      </div>
     <h3 class="subTitulo" id="unoDieciseis">Registros del sistema</h3>
         <p>En determinados S.O. nos brinda un registro que centraliza la configuración, sus servicios y aplicaciones. El visor de eventos complementan la información del registro. Es preciso realizar mantenimiento y limpieza regular.</p>
-        <div class="menuOpcional">
-          <a href="../sistemas/indiceSistemas.html"><div class="botonO">Índice</div></a>
-          <a href="../../index.html"><div class="botonO">Principal</div></a>
-          <a href="#unoUno"><div class="botonO">Arriba</div></a>
-      </div>
     <h3 class="subTitulo" id="unoDiecisiete">Actualización y mantenimiento de controladores de dispositivos</h3>
         <p>Drivers o controladores permiten que el S.O. pueden trabajar con ellos, conforme vayan apareciendo nuevas versiones de ellos para optimizar el rendimiento y minimizar problemas en el futuro.</p>
         <ul>
