--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -21,7 +21,7 @@
   </header> 
   <main class="main--Apuntes">
     <a name="5.0"></a>
-    <h3 class="subTitulo_3">Introducción</h3>
+    <h3 class="subTitulo" id="">Introducción</h3>
     <article class="articuloApuntes">
       <p>
         Hasta ahora hemos trabajado con información que una vez que finaliza la ejecución del programa, desaparece de la memoria, ya que ha estado almacenada en la memoria principal en el tiempo que dura la ejecución del software.
@@ -34,7 +34,7 @@
   
     
     <a name="5.1"></a>
-    <h3 class="subTitulo_3">Concepto y tipos de ficheros</h3>
+    <h3 class="subTitulo" id="">Concepto y tipos de ficheros</h3>
     <article class="articuloApuntes">
       <p>
         Un fichero es una parte de un dispositivo no volátil a la que se le asigna un nombre y que puede contener una cantidad de datos que va a estar limitada, o por la cantidad de espacio del que disponga el dispositivo, o por las características del SO. Los dispositivos no volátiles son aquellos que no pierden la información cuando apagamos nuestro ordenador.
@@ -162,7 +162,7 @@
   
   
     <a name="5.2"></a>
-    <h3 class="subTitulo_3">Diseño y modulación de las operaciones sobre ficheros</h3>
+    <h3 class="subTitulo" id="">Diseño y modulación de las operaciones sobre ficheros</h3>
     <article class="articuloApuntes">
       <h4 class="subTitulo_4">Fundamentos de los flujos</h4>
       <p>
@@ -261,7 +261,7 @@
   
   
     <a name="5.3"></a>
-    <h3 class="subTitulo_3">Operaciones sobre ficheros secuenciales</h3>
+    <h3 class="subTitulo" id="">Operaciones sobre ficheros secuenciales</h3>
     <article class="articuloApuntes">
       <article class="articuloApuntes">
         <h4 class="subTitulo_4">Apertura</h4>
@@ -503,7 +503,7 @@
   
   
     <a name="5.4"></a>
-    <h3 class="subTitulo_3">Control de excepciones</h3>
+    <h3 class="subTitulo" id="">Control de excepciones</h3>
     <article class="articuloApuntes">
       <p>
         Hasta ahora, el problema es que no hemos comprobado si ese fichero realmente existe o no, lo que puede suponer que nuestro programa falle en caso de que el fichero no se encuentre donde esperamos. <br>
