--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -32,7 +32,7 @@
     </div>
    <!-- INTRO -->
     <a name="2.0"></a>
-    <h3 class="subTitulo_3">Introducción</h3>
+    <h3 class="subTitulo" id="">Introducción</h3>
     <article class="articuloApuntes">
       <p>Para desarrollar nuestros programas utilizaremos el lenguaje de programación C# es un lenguaje de alto nivel que pertenece al conjunto de lenguajes de .NET. Para ello utilizaremos un IDE, un entorno de desarrollo integrado diseñado para el desarrollo de aplicaciones con un conjunto de herramientas integradas en una interfaz gráfica de usuario (GUI). Sus características son:</p>
     </article> 
@@ -47,7 +47,7 @@
   
    <!-- PUNTO 2.1 -->
     <a name="2.1"></a>
-    <h3 class="subTitulo_3">Bloques de un programa informático</h3>
+    <h3 class="subTitulo" id="">Bloques de un programa informático</h3>
     <article class="articuloApuntes">
       <p>Un programa es una secuencia de intrucciones separadas por un punto y coma que se van a ir agrupando en diferentes bloques mediante llaves.</p>
       <p>Cuando creamos un nuevo proyecto, se crea la siguiente estructura.</p>
@@ -93,7 +93,7 @@
   
    <!-- PUNTO 2.2 -->  
     <a name="2.2"></a>
-    <h3 class="subTitulo_3">Variables. Usos y Tipos</h3>
+    <h3 class="subTitulo" id="">Variables. Usos y Tipos</h3>
     <article class="articuloApuntes">
       <p>Una <strong>variable</strong> es una estructura de datos que ocupan un espacio en memoria y pueden variar a lo largo de un programa.</p>
       <p>Cuando <strong>declaramos una variable</strong> establecemos el tipo de dato (entero, cadena, carácter, etc) y su identificador.</p>
@@ -144,7 +144,7 @@
   
    <!-- PUNTO 2.3 -->
     <a name="2.3"></a>
-    <h3 class="subTitulo_3">Constantes y Literales. Tipos y utilidades</h3>
+    <h3 class="subTitulo" id="">Constantes y Literales. Tipos y utilidades</h3>
     <h4 class="subTitulo_4">Constantes</h4>
     <article class="articuloApuntes">  
       <p>Son aquellas cuyo contenido no se puede alterar a lo largo del programa. La palabra reservada es <strong>const</strong>, y se definen fuera del cuerpo de cualquier función, normalmente al principio del programa.</p>
@@ -185,7 +185,7 @@
   
    <!-- PUNTO 2.4 -->
     <a name="2.4"></a>
-    <h3 class="subTitulo_3">Operadores del lenguaje de programación</h3>
+    <h3 class="subTitulo" id="">Operadores del lenguaje de programación</h3>
     <h4 class="subTitulo_4">Operadores aritméticos</h4>
     <article class="articuloApuntes"> 
       <table>
@@ -354,7 +354,7 @@
   
    <!-- PUNTO 2.5 -->
     <a name="2.5"></a>
-    <h3 class="subTitulo_3">Conversiones de tipos de clase</h3>
+    <h3 class="subTitulo" id="">Conversiones de tipos de clase</h3>
     <article class="articuloApuntes">
       <p>Cuando declaramos una variable, no se puede volver a declarar, ni asignar un valor de otro tipo. En ocasiones, podemos convertir el valor de una variable de un tipo a otro. Podemos tener diferentes clases de conversiones:</p>
       <ul>
@@ -414,7 +414,7 @@
   
    <!-- PUNTO 2.6 -->
     <a name="2.6"></a>
-    <h3 class="subTitulo_3">Comentario al código</h3>
+    <h3 class="subTitulo" id="">Comentario al código</h3>
     <article class="articuloApuntes">
       <p>No debemos pasar por alto que, además de realizar programas, lo debemos hacer de la forma más optimizada y ordenada posible. Los <strong>comentarios</strong> son una herramienta disponible en el compilador para que se puedan hacer anotaciones en el código sin que sea procesado por el compilador. Está permitido hacer dos tipos de comentarios:</p>
       <ul>
