--- a/daw/proUno/proUno.html
+++ b/daw/proUno/proUno.html
@@ -32,7 +32,7 @@
       </ol>
     </div>
    <!-- INTRO -->
-    <h3 class="subTitulo_3">Introducción</h3>
+    <h3 class="subTitulo" id="">Introducción</h3>
     <article class="articuloApuntes">
       <p>
         Un programa es un conjunto de instrucciones dadas al ordenador
@@ -72,7 +72,7 @@
   
    <!-- PUNTO 1.1 -->
     <a name="1.1"></a>
-    <h3 class="subTitulo_3">Representaciones gráficas</h3>
+    <h3 class="subTitulo" id="">Representaciones gráficas</h3>
     <article class="articuloApuntes">
       <p>Para representar un algoritmo, podemos utilizar dos
         herramientas gráficas: los diagramas de flujo y el pseudocódigo.</p>
@@ -114,7 +114,7 @@
   
    <!-- PUNTO 1.2 -->
     <a name="1.2"></a>
-    <h3 class="subTitulo_3">Características de los diagramas de flujo</h3>
+    <h3 class="subTitulo" id="">Características de los diagramas de flujo</h3>
     <article class="articuloApuntes">
       <ul>
         <li>Deben escribirse de arriba abajo o de izquierda a derecha.</li>
@@ -131,7 +131,7 @@
   
    <!-- PUNTO 1.3 -->
     <a name="1.3"></a>
-    <h3 class="subTitulo_3">Características del pseudocódigo</h3>
+    <h3 class="subTitulo" id="">Características del pseudocódigo</h3>
     <article class="articuloApuntes">
       <ul>
         <li>Comienza con la palabra algoritmo seguido de su nombre.</li>
@@ -145,7 +145,7 @@
   
    <!-- PUNTO 1.4 -->
     <a name="1.4"></a>
-    <h3 class="subTitulo_3">Comunicación de un sistema informático</h3>
+    <h3 class="subTitulo" id="">Comunicación de un sistema informático</h3>
     <article class="articuloApuntes">
       <p>En el proceso de programación se comunica a un usuario con una máquina, se necesita:</p>
     </article>
@@ -164,7 +164,7 @@
   
    <!-- PUNTO 1.5 -->
     <a name="1.5"></a>
-    <h3 class="subTitulo_3">Características del lenguaje de alto nivel</h3>
+    <h3 class="subTitulo" id="">Características del lenguaje de alto nivel</h3>
     <article class="articuloApuntes">
       <ul>
         <li>Es totalmente independiente de la máquina y muy portable.</li>
@@ -177,7 +177,7 @@
   
    <!-- PUNTO 1.6 -->
     <a name="1.6"></a>
-    <h3 class="subTitulo_3">Características del lenguaje de bajo nivel</h3>
+    <h3 class="subTitulo" id="">Características del lenguaje de bajo nivel</h3>
     <article class="articuloApuntes">
       <ul>
         <li>Está relacionado con las características del hardware.</li>
@@ -192,7 +192,7 @@
   
    <!-- PUNTO 1.7 -->
     <a name="1.7"></a>
-    <h3 class="subTitulo_3">Lenguajes compilados e interpretados</h3>
+    <h3 class="subTitulo" id="">Lenguajes compilados e interpretados</h3>
     <article class="articuloApuntes">
       <p>Los compilados son como su nombre indica aquellos que utilizan un compilador para traducirlos al lenguaje máquina.</p>
       <p>En los interpretados se efectúa directamente la traducción y ejecución simultáneamente para cada una de las sentencias. Un intérprete verifica cada línea cuando se escribe. La ejecución es más lenta debido a esta traducción simultánea.</p>
