--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -21,7 +21,7 @@
   </header>
   <main class="main--Apuntes">
     <a name="3.0"></a>
-    <h3 class="subTitulo_3">Introducción</h3>
+    <h3 class="subTitulo" id="">Introducción</h3>
     <article class="articuloApuntes">
       <p>
         La programación estructurada es un procedimiento que consiste en diseñar e inplementar programas de forma clara y sencilla para que puedan se mantenidos con facilidad.
@@ -31,7 +31,7 @@
   
   
     <a name="3.1"></a>
-    <h3 class="subTitulo_3">Fundamentos de programación</h3>
+    <h3 class="subTitulo" id="">Fundamentos de programación</h3>
     <article class="articuloApuntes">
       <p>
         Los fundamentos de la programación son un conjunto de técnicas que persiguen desarrollar algoritmos que sean sencillos de escribir, leer, modificar y testear.
@@ -53,7 +53,7 @@
   
   
     <a name="3.2"></a>
-    <h3 class="subTitulo_3">Introducción a la algoritmia y herramientas de diseño</h3>
+    <h3 class="subTitulo" id="">Introducción a la algoritmia y herramientas de diseño</h3>
     <article class="articuloApuntes">
       <p>
         Un algoritmo es una secuencia de los pasos de las distintas operaciones que debe realizar el programa para conseguir resolver un problema planteado.
@@ -69,7 +69,7 @@
   
   
     <a name="3.3"></a>
-    <h3 class="subTitulo_3">Ciclo de vida de un proyecto software</h3>
+    <h3 class="subTitulo" id="">Ciclo de vida de un proyecto software</h3>
     <article class="articuloApuntes">
       <p>Ciclo de vida de un programa informático:</p>
       <ul>
@@ -126,7 +126,7 @@
   
   
     <a name="3.4"></a>
-    <h3 class="subTitulo_3">Prueba de programas</h3>
+    <h3 class="subTitulo" id="">Prueba de programas</h3>
     <article class="articuloApuntes">
       <p>
         Una vez implementado y compilado el código debemos comenzar la estapa de testing.
@@ -154,7 +154,7 @@
   
   
     <a name="3.5"></a>
-    <h3 class="subTitulo_3">Tipos de datos: simples y compuestos</h3>
+    <h3 class="subTitulo" id="">Tipos de datos: simples y compuestos</h3>
     <article class="articuloApuntes">
       <h4 class="subTitulo_4">Tipos simples</h4>
       <p>
@@ -208,7 +208,7 @@
   
   
     <a name="3.6"></a>
-    <h3 class="subTitulo_3">Estructuras de selección (Condicionales)</h3>
+    <h3 class="subTitulo" id="">Estructuras de selección (Condicionales)</h3>
     <article class="articuloApuntes">
       <p>
         Las estructuras de selección son aquellas que permiten ejecutar una parte del código dependiendo de si cumple o no una condición.
@@ -370,7 +370,7 @@
   
   
     <a name="3.7"></a>
-    <h3 class="subTitulo_3">Estructuras de repetición</h3>
+    <h3 class="subTitulo" id="">Estructuras de repetición</h3>
     <article class="articuloApuntes">
       <p>
         Las estructuras de repetición siempre se ejecutan mediante el uso de bucles. Estos permiten que una o varias líneas se ejecuten de forma repetida. Y se repiten mientras que se cumpla la condición de salida.
@@ -472,7 +472,7 @@
   
   
     <a name="3.8"></a>
-    <h3 class="subTitulo_3">Estructuras de salto</h3>
+    <h3 class="subTitulo" id="">Estructuras de salto</h3>
     <article class="articuloApuntes">
       <p>
         Son aquellas que detienen la ejecución de alguna de las sentencias de control de nuestro programa.
@@ -538,7 +538,7 @@
   
   
     <a name="3.9"></a>
-    <h3 class="subTitulo_3">Tratamiento de cadenas</h3>
+    <h3 class="subTitulo" id="">Tratamiento de cadenas</h3>
     <article class="articuloApuntes">
       <p>
         Una cadena es un objeto de tipo string. Se utiliza la palabra reservada string. Siempre que queramos escribir combinaciones alfanuméricas, irán entre comillas dobles, ya que el compilador las tomará como un tipo string.
@@ -627,7 +627,7 @@
   
     
     <a name="3.10"></a>
-    <h3 class="subTitulo_3">Depuración de errores</h3>
+    <h3 class="subTitulo" id="">Depuración de errores</h3>
     <article class="articuloApuntes">
       <p>
         Llegados a esta etapa, nuestro objetivo será descubrir todos los errores que existan e intentar solucionarlos de la mejor forma posible. <br>
@@ -651,7 +651,7 @@
   
   
     <a name="3.11"></a>
-    <h3 class="subTitulo_3">Documentación de programas</h3>
+    <h3 class="subTitulo" id="">Documentación de programas</h3>
     <article class="articuloApuntes">
       <p>
         Debemos elaborar una memoria para que quede registrado todo el desarrollo que hemos llevado a cabo, los fallos que ha presentado y cómo hemos conseguido solventarlos. <br>
@@ -666,7 +666,7 @@
   
   
     <a name="3.12"></a>
-    <h3 class="subTitulo_3">Entornos de desarrollo de programas</h3>
+    <h3 class="subTitulo" id="">Entornos de desarrollo de programas</h3>
     <article class="articuloApuntes">
       <p>
         Podemos denominar entorno de desarrollo integrado (IDE), al entorno de programación que hemos utilizado para su realización: editor de código, compilador, depurador e interfaz gráfica. <br>
