--- a/daw/sistemas/sistemasCinco.html
+++ b/daw/sistemas/sistemasCinco.html
@@ -24,41 +24,41 @@
       <h1>Tema 5.- Administración del acceso al dominio</h1>
     </div>
         <article class="articuloApuntes">
-          <h3 class="subTitulo_3">Introducción</h3>
+          <h3 class="subTitulo" id="">Introducción</h3>
         </article>
     <a name="5.1"></a>
       <article class="articuloApuntes">
-        <h3 class="subTitulo_3">Equipos de dominio</h3>
+        <h3 class="subTitulo" id="">Equipos de dominio</h3>
         <a class="btnArriba" href="#top">Arriba</a>
       </article>
     <a name="5.2"></a>
       <article class="articuloApuntes">
-        <h3 class="subTitulo_3">Permisos y derechos</h3>
+        <h3 class="subTitulo" id="">Permisos y derechos</h3>
         <a class="btnArriba" href="#top">Arriba</a>
       </article>
     <a name="5.3"></a>
       <article class="articuloApuntes">
-        <h3 class="subTitulo_3">Administración del acceso a recursos. Samba. NFS</h3>
+        <h3 class="subTitulo" id="">Administración del acceso a recursos. Samba. NFS</h3>
         <a class="btnArriba" href="#top">Arriba</a>
       </article>
     <a name="5.4"></a>
       <article class="articuloApuntes">
-        <h3 class="subTitulo_3">Permisos de red. Permisos locales. Herencia. Permisos efectivos</h3>
+        <h3 class="subTitulo" id="">Permisos de red. Permisos locales. Herencia. Permisos efectivos</h3>
         <a class="btnArriba" href="#top">Arriba</a>
       </article>
     <a name="5.5"></a>
       <article class="articuloApuntes">
-        <h3 class="subTitulo_3">Delegación de permisos</h3>
+        <h3 class="subTitulo" id="">Delegación de permisos</h3>
         <a class="btnArriba" href="#top">Arriba</a>
       </article>
     <a name="5.6"></a>
       <article class="articuloApuntes">
-        <h3 class="subTitulo_3">Listas de control de acceso (ACL Access Control List)</h3>
+        <h3 class="subTitulo" id="">Listas de control de acceso (ACL Access Control List)</h3>
         <a class="btnArriba" href="#top">Arriba</a>
       </article>
     <a name="5.7"></a>
       <article class="articuloApuntes">
-        <h3 class="subTitulo_3">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</h3>
+        <h3 class="subTitulo" id="">Directivas de grupo. Derechos de usuarios. Directivas de seguridad. Objetos de directiva. Ámbito de las directivas. Plantillas</h3>
         <a class="btnArriba" href="#top">Arriba</a>
       </article>
   </main>
