--- a/daw/sistemas/sistemasCuatro.html
+++ b/daw/sistemas/sistemasCuatro.html
@@ -25,11 +25,11 @@
       <h1>Tema 4.- Administración de dominios</h1>
     </div>
       <a name="4.1"></a>
-      <h3 class="subTitulo_3">>Introducción</h3>
+      <h3 class="subTitulo" id="">>Introducción</h3>
         <p>
           Mediante la Administración dominios podemos centralizar, simplificar y agilizar muy significativamente las tareas de gestión. Crear un dominio en un equipo servidor al que se conecten equipos cliente resulta muy práctico para administrar redes.
         </p>
-      <h3 class="subTitulo_3">Estructura cliente-servidor</h3>
+      <h3 class="subTitulo" id="">Estructura cliente-servidor</h3>
         <p>
           Este modelo de comunicación es bastante sencillo, ya que apartir de un equipo cliente, se necesita otro equipo servidor para que este realice aquellas funciones que tiene asignadas.
         </p>
@@ -49,7 +49,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.2"></a>
-      <h3 class="subTitulo_3">Protocolo LDAP</h3>
+      <h3 class="subTitulo" id="">Protocolo LDAP</h3>
         <p>
           Consideramos LDAP(Lightweight Directory Access Protocol) como un protocolo ligero de acceso a directorios. Se utiliza especialmente en las empresas, se emplea para acceder a servicios de directorio.
         </p>
@@ -93,7 +93,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.3"></a>
-      <h3 class="subTitulo_3">Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
+      <h3 class="subTitulo" id="">Concepto de dominio. Subdominios. Requisitos necesarios para montar un dominio</h3>
         <p>
           Dependiendo de si estamos hablando de redes en sentido general o bien de internet podemos encontrar dos deficiones diferentes.
         </p>
@@ -171,7 +171,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.4"></a>
-      <h3 class="subTitulo_3">Conceptos clave de Active Directory</h3>
+      <h3 class="subTitulo" id="">Conceptos clave de Active Directory</h3>
         <p>
           Es una herramienta de Microsoft para gestionar servidores y administrar en ellos usuarios, grupos, etc.. Podemos gestionar los inicios de sesión de los equipos conectados a la red, definir políticas, etc.
         </p>
@@ -246,7 +246,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.5"></a>
-      <h3 class="subTitulo_3">Administración de cuentas. Cuentas predeterminadas</h3>
+      <h3 class="subTitulo" id="">Administración de cuentas. Cuentas predeterminadas</h3>
         <p>
           En aplicaciones como AD nos interesa generar cuentas de usuario para asignarlas a las distintas personas que van acceder a la red. A nivel interno, las cuentas de usuario son elementos de una base de datos de directorio a los que se les asigna de forma automatizada unos identificadores para garantizar la seguridad. Tras dar de alta a los usuarios, estos pueden acceder y utilizar los recursos del dominio que tengan asignados.
         </p>
@@ -284,7 +284,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.6"></a>
-      <h3 class="subTitulo_3">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
+      <h3 class="subTitulo" id="">Contraseñas. Bloqueos de cuenta. Cuentas de usuarios y equipos</h3>
         <p>
           A los usuarios dados de alta se les asignarán distintos privilegios, por lo que es vital que le asignemos contraseñas seguras.
         </p>
@@ -311,7 +311,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.7"></a>
-      <h3 class="subTitulo_3">Perfiles móviles y obligatorios</h3>
+      <h3 class="subTitulo" id="">Perfiles móviles y obligatorios</h3>
         <p>
           Los perfiles de usuario nos permiten asignar a los usuarios del sistema características como los archivos y carpetas que utilizarán y la configuración de su escritorio. Toda esa información se lee y se carga cada vez que un usuario inicia sesión.
         </p>
@@ -335,7 +335,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.8"></a>
-      <h3 class="subTitulo_3">Carpetas personales</h3>
+      <h3 class="subTitulo" id="">Carpetas personales</h3>
         <p>
           Cada usuario puede almacenar su información personal en una subcarpeta propia. Esta tendra el nombre del propio usuario y es frecuente que aparezca en los equipos cliente como una unidad de red. 
         </p>
@@ -350,7 +350,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.9"></a>
-      <h3 class="subTitulo_3">Plantillas de usuario. Variables de entorno</h3>
+      <h3 class="subTitulo" id="">Plantillas de usuario. Variables de entorno</h3>
         <p>
           Se utilizan para ahorrarnos una gran cantidad de trabajo. Nos permiten definir una serie de características comunes que posteriormente podemos aplicar a un gran número de usuarios.
         </p>
@@ -385,7 +385,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.10"></a>
-      <h3 class="subTitulo_3">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
+      <h3 class="subTitulo" id="">Administración de grupos. Tipo. Estrategias de anidamiento. Grupos predeterminados</h3>
         <p>
           Si la empresa u organización cuya red administramos tiene un elevado número de departamentos y usuarios es fundamental que planeemos una estrategia para estructurarla en grupos.
         </p>
@@ -436,7 +436,7 @@
     <!--*************************************************************-->
     <article class="articuloApuntes">
       <a name="4.11"></a>
-      <h3 class="subTitulo_3">Instalación de Windows Server y Ubuntu Server</h3>
+      <h3 class="subTitulo" id="">Instalación de Windows Server y Ubuntu Server</h3>
         <p>Empecemos por Windows Server 2019:</p>
         <ol>
           <li>Configuramos la BIOS para que se inicie desde el DVD</li>
