--- a/daw/sistemas/sistemasSeis.html
+++ b/daw/sistemas/sistemasSeis.html
@@ -24,42 +24,42 @@
     <h1>Tema 6.- Resolución de incidencias y asistencia técnica</h1>
   </div>
     <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Introducción</h3>
+      <h3 class="subTitulo" id="">Introducción</h3>
     </article>
   <!--*************************************************************-->
   <a name="6.1"></a>
     <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</h3>
+      <h3 class="subTitulo" id="">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.2"></a>
     <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</h3>
+      <h3 class="subTitulo" id="">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.3"></a>
     <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Instalación desatendidas e implementación de archivos de respuesta</h3>
+      <h3 class="subTitulo" id="">Instalación desatendidas e implementación de archivos de respuesta</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.4"></a>
     <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Servidores de actualizaciones automáticas</h3>
+      <h3 class="subTitulo" id="">Servidores de actualizaciones automáticas</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.5"></a>
     <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Partes de incidencias y protocolos de actuación</h3>
+      <h3 class="subTitulo" id="">Partes de incidencias y protocolos de actuación</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   <!--*************************************************************-->
   <a name="6.6"></a>
     <article class="articuloApuntes">
-      <h3 class="subTitulo_3">Administración remota</h3>
+      <h3 class="subTitulo" id="">Administración remota</h3>
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </main>
