--- a/index.html
+++ b/index.html
@@ -54,17 +54,24 @@
         </div>
       </a>
       <!----------------------------------------->
-      <a href="#">
-        <div class="card inactiva">
+      <a href="./daw/entornoDesarrollo/indice_entornoDesarrollo.html">
+        <div class="card tercerT">
           <div><h3>Entornos de Desarrollo</h3></div>
-          <div><h5>x Semestre</h5></div>
+          <div><h5>Tercer Semestre</h5></div>
         </div>
       </a>
       <!----------------------------------------->
-      <a href="#">
-        <div class="card inactiva">
+      <a href="./daw/dwEntornoCliente/indice_dwEc.html">
+        <div class="card tercerT">
           <div><h3>Desarrollo web en Entorno Cliente</h3></div>
-          <div><h5>x Semestre</h5></div>
+          <div><h5>Tercer Semestre</h5></div>
+        </div>
+      </a>
+      <!----------------------------------------->
+      <a href="./daw/fol/indice_fol.html">
+        <div class="card tercerT">
+          <div><h3>Formación y Orientación Laboral</h3></div>
+          <div><h5>Tercer Semestre</h5></div>
         </div>
       </a>
       <!----------------------------------------->
